creacion de registro y un boton añadido en login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,4 +20,7 @@
 
     <p *ngIf="error" style="color: red;">{{ error }}</p>
   </form>
+
+  <!-- Botón para redirigir a la página de registro -->
+  <ion-button expand="full" routerLink="/register" class="ion-margin-top">¿No tienes una cuenta? Regístrate</ion-button>
 </ion-content>
