--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,17 +5,19 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+
   <ion-item>
     <ion-label position="floating">Correo</ion-label>
-    <ion-input [(ngModel)]="email" type="email"></ion-input>
+    <ion-input [(ngModel)]="user.email" type="email"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Contraseña</ion-label>
-    <ion-input [(ngModel)]="password" type="password"></ion-input>
+    <ion-input [(ngModel)]="user.password" type="password"></ion-input>
   </ion-item>
 
   <ion-button expand="block" (click)="onLogin()">
     Iniciar sesión
   </ion-button>
+
 </ion-content>
