--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,8 +16,15 @@
     <ion-input [(ngModel)]="user.password" type="password"></ion-input>
   </ion-item>
 
-  <ion-button expand="block" (click)="onLogin()">
-    Iniciar sesión
+  <ion-button expand="block" (click)="onLogin()">Iniciar sesión</ion-button>
+
+  <p *ngIf="errorMessage" style="color: red; margin-top: 10px;">
+    {{ errorMessage }}
+  </p>
+
+  <!-- Botón para ir a registro -->
+  <ion-button expand="block" fill="clear" routerLink="/register">
+    ¿No tienes cuenta? Regístrate
   </ion-button>
 
 </ion-content>
