--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content id="main-content" class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <app-principal-news
+    [news]="principalNews"
+    (clickCard)="openNewsModal($event)">
+  </app-principal-news>
+
+  <ion-list>
+    <app-card 
+      *ngFor="let news of otherNews" 
+      [news]="news"
+      (clickCard)="openNewsModal(news)">
+    </app-card>
+  </ion-list>
+
 </ion-content>
