--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -7,40 +7,46 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-
+<ion-content>
   <ion-list>
-    <ion-list-header>
-      <ion-label>Datos del Usuario</ion-label>
-    </ion-list-header>
-
     <ion-item>
       <ion-label position="stacked">Nombre</ion-label>
-      <ion-input [(ngModel)]="user.name"></ion-input>
+      <ion-input [(ngModel)]="user.name" name="name"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="stacked">Apellido</ion-label>
-      <ion-input [(ngModel)]="user.lastName"></ion-input>
+      <ion-input [(ngModel)]="user.lastname" name="lastname"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="stacked">Correo</ion-label>
-      <ion-input [(ngModel)]="user.email" type="email"></ion-input>
+      <ion-input [(ngModel)]="user.email" name="email" disabled="true"></ion-input>
+    </ion-item>
+
+    <!-- 🔑 Contraseña con ojito -->
+    <ion-item>
+      <ion-label position="stacked">Contraseña</ion-label>
+      <ion-input 
+        [type]="showPassword ? 'text' : 'password'" 
+        [(ngModel)]="user.password" 
+        name="password">
+      </ion-input>
+      <ion-button fill="clear" slot="end" (click)="togglePassword()" aria-label="Toggle password visibility">
+        <ion-icon [name]="showPassword ? 'eye-off' : 'eye'"></ion-icon>
+      </ion-button>
     </ion-item>
 
     <ion-item>
       <ion-label position="stacked">País</ion-label>
-      <ion-select [(ngModel)]="user.country">
-        <ion-select-option *ngFor="let c of countries" [value]="c.name">
-          <span>{{ c.flag }}</span> {{ c.name }}
-        </ion-select-option>
-      </ion-select>
+      <ion-input [(ngModel)]="user.country" name="country"></ion-input>
     </ion-item>
-
-    <ion-button expand="block" color="primary" (click)="updateProfile()">
-      Guardar Cambios
-    </ion-button>
   </ion-list>
 
+  <ion-button expand="block" (click)="saveProfile()">GUARDAR CAMBIOS</ion-button>
+
+  <!-- ✅ Mensaje de éxito -->
+  <div *ngIf="successMessage" class="success-message">
+    {{ successMessage }}
+  </div>
 </ion-content>
