añadido del api de las noticias a environments modificaion de profile en la modificaion de pais y cambio en el home para mostrar las noticias con scroll infinito

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,11 +3,13 @@
 
 <ion-content id="main-content" class="ion-padding">
 
+  <!-- Noticia principal -->
   <app-principal-news
     [news]="principalNews"
     (clickCard)="openNewsModal($event)">
   </app-principal-news>
 
+  <!-- Lista de noticias -->
   <ion-list>
     <app-card 
       *ngFor="let news of otherNews" 
@@ -15,5 +17,13 @@
       (clickCard)="openNewsModal(news)">
     </app-card>
   </ion-list>
+
+  <!-- Scroll infinito -->
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadMoreNews($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Cargando más noticias...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
