--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,3 +1,17 @@
-<p>
-  card works!
-</p>
+<ion-card class="news-card" (click)="onClick()">
+  <!-- Imagen -->
+  <img [src]="news.urlToImage || 'assets/default-news.jpg'"
+       (error)="news.urlToImage='assets/default-news.jpg'" />
+
+  <!-- Contenido con estilo -->
+  <div class="card-content">
+    <ion-card-header>
+      <ion-card-title>{{ news.title }}</ion-card-title>
+      <ion-card-subtitle>{{ news.source?.name }}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      {{ news.description }}
+    </ion-card-content>
+  </div>
+</ion-card>
